(dirs bin packages e2e)

(subdir
 e2e
 (dirs melange-v1))

(subdir
 packages
 (dirs
  css
  emotion
  emotion-hash
  css-spec-parser
  parser
  ppx
  reason-css-lexer
  reason-css-parser
  renderer
  string_interpolation))

(melange.emit
 (target hash-dist-js)
 (libraries emotion_hash)
 (module_systems
  (es6 es6.js)
  (commonjs cjs.js))
 (runtime_deps packages/emotion-hash/package.json))
