(melange.emit
 (alias demo-melange)
 (target demo-melange)
 (modules :standard \ server)
 (libraries lib_js styled-ppx.melange reason-react)
 (preprocess
  (pps styled-ppx melange.ppx reason-react-ppx))
 (module_systems
  (commonjs bs.js)))

(alias
 (name demo-melange)
 (deps public/styles.css))

(subdir
 public
 ; Generate the promoted demo stylesheet from PPX output produced by the
 ; melange/server build targets.
 (rule
  (target styles.css)
  (mode promote)
  (deps
   (glob_files_rec ../**.pp.ml))
  (action
   (run styled-ppx.generate --output %{target} %{deps}))))

(executable
 (name server)
 (public_name demo-melange-server)
 (modules :standard \ client)
 (libraries
  lib_native
  server-reason-react.js
  server-reason-react.belt
  server-reason-react.react
  server-reason-react.reactDom
  styled-ppx.native)
 (preprocess
  (pps styled-ppx server-reason-react.ppx server-reason-react.melange_ppx)))
