(alias
 (name static)
 (deps public/main.js public/styles.css))

(melange.emit
 (target demo-melange)
 (modules :standard \ print)
 (libraries lib_js styled-ppx.melange reason-react)
 (preprocess
  (pps styled-ppx melange.ppx reason-react-ppx))
 (module_systems
  (commonjs bs.js)))

(subdir
 public
 ; Generate the promoted demo stylesheet from PPX output produced by the
 ; melange/print build targets.
 (rule
  (mode promote)
  (target styles.css)
  (deps
   (glob_files_rec ../client.re.pp.ml))
  (action
   (run styled-ppx.generate --output %{target} --log info %{deps})))
 ; Bundle the Melange client output into `public/main.js` with esbuild,
 ; run as part of the dune build (mirrors server-reason-react's demo).
 (rule
  (target main.js)
  (mode promote)
  (deps
   (:script ../build.mjs)
   (:entry ../demo-melange/demo/melange/client.bs.js)
   (alias ../melange)
   (source_tree ../node_modules)
   (file ../package.json))
  (action
   (run node %{script} %{entry} --output %{target} --env development))))

(executable
 ; Prints the App component markup to stdout
 (name print)
 (public_name demo-exe)
 (modules :standard \ client)
 (libraries
  lib_native
  server-reason-react.js
  server-reason-react.belt
  server-reason-react.react
  server-reason-react.reactDom
  styled-ppx.native)
 (preprocess
  (pps styled-ppx server-reason-react.ppx server-reason-react.melange_ppx)))
