(melange.emit
 (alias e2e-melange)
 (target e2e-melange)
 (modules :standard \ debug)
 (libraries ui styled-ppx.css styled-ppx.emotion reason-react)
 (preprocess
  (pps melange.ppx styled-ppx reason-react-ppx))
 (module_systems
  (commonjs bs.js)))

(executable
 (name debug)
 (public_name e2e_melange_debug)
 (modules :standard \ index)
 (libraries ui_native server-reason-react.react server-reason-react.reactDom styled-ppx.emotion_native styled-ppx.css_native)
 (preprocess
  (pps styled-ppx)))
