(melange.emit
 (alias e2e-melange)
 (target e2e-melange)
 (modules :standard \ debug)
 (libraries ui styled-ppx.melange reason-react)
 (preprocess
  (pps melange.ppx styled-ppx reason-react-ppx))
 (module_systems
  (commonjs bs.js)))

(executable
 (name debug)
 (public_name e2e-melange-debug)
 (modules :standard \ index)
 (libraries
  ui_native
  server-reason-react.js
  server-reason-react.belt
  server-reason-react.react
  server-reason-react.reactDom
  styled-ppx.native)
 (preprocess
  (pps styled-ppx)))
