(melange.emit
 (alias e2e-melange)
 (target e2e-melange)
 (modules :standard \ server)
 (libraries ui styled-ppx.melange reason-react)
 (preprocess
  (pps melange.ppx styled-ppx reason-react-ppx))
 (module_systems
  (commonjs bs.js)))

(executable
 (name server)
 (public_name e2e-melange-server)
 (modules :standard \ client)
 (libraries
  ui_native
  server-reason-react.js
  server-reason-react.belt
  server-reason-react.react
  server-reason-react.reactDom
  styled-ppx.native)
 (preprocess
  (pps styled-ppx)))
