(library
 (name universal_lib_native)
 (wrapped false)
 (libraries
  styled-ppx.native
  server-reason-react.react
  server-reason-react.js
  server-reason-react.belt
  server-reason-react.reactDom)
 (preprocess
  (pps styled-ppx --native server-reason-react.ppx)))

(copy_files
 (only_sources)
 (files "./shared/*.{re,ml}"))
