(library
 (name StyledPpxTestNativeLib)
 (modules
  (:standard \ static_css_tests selectors_css_tests media_query_css_tests
    keyframe_css_tests TestRunner))
 (library_flags
  (-linkall -g))
 (libraries StyledPpxTestNativeBSCSS rely.lib styled-ppx.lib ppxlib)
 (preprocess
  (pps ppx_tools_versioned.metaquot_410 styled-ppx.lib)))

(executable
 (name TestRunner)
 (modules TestRunner)
 (libraries StyledPpxTestNativeLib styled-ppx.parser)
 (preprocess
  (pps ppx_tools_versioned.metaquot_410 styled-ppx.lib)))

; type check

(rule
 (targets static_css_tests.ml selectors_css_tests.ml media_query_css_tests.ml
   keyframe_css_tests.ml)
 (deps ./TestRunner.exe)
 (action
  (run %{deps})))

(library
 (name StyledPpxTestNativeTypeCheck)
 (libraries StyledPpxTestNativeBSCSS)
 (modules static_css_tests selectors_css_tests media_query_css_tests
   keyframe_css_tests)
 (preprocess
  (pps ppx_tools_versioned.metaquot_410 styled-ppx.lib)))

(rule
 (alias run_typecheck_test)
 (deps
   .StyledPpxTestNativeTypeCheck.objs/byte/styledPpxTestNativeTypeCheck__Static_css_tests.cmi
   .StyledPpxTestNativeTypeCheck.objs/byte/styledPpxTestNativeTypeCheck__Selectors_css_tests.cmi
   .StyledPpxTestNativeTypeCheck.objs/byte/styledPpxTestNativeTypeCheck__Media_query_css_tests.cmi
   .StyledPpxTestNativeTypeCheck.objs/byte/styledPpxTestNativeTypeCheck__Keyframe_css_tests.cmi)
 (action
  ; this is only because a action is required
  (echo %{deps})))
