(library
 (name StyledPpxTestNativeSnapshot)
 (library_flags
  (-linkall -g))
 (libraries styled-ppx.lib)
 (preprocess
  (pps styled-ppx.lib)))

(rule
 (targets pp.result)
 (deps simple.re.pp.ml)
 (action
  (with-stdout-to
   %{targets}
   (run refmt --parse=binary %{deps}))))

(rule
 (alias runtest)
 (action
  (diff pp.expected pp.result)))
